# traveling-salesman-bee-algo

./: CMakeLists.txt  main.cpp
algorithm/: BeeColonyAlgorithm.cpp  BeeColonyAlgorithm.h  SolutionTSP.cpp  SolutionTSP.h
helpers/: DistanceMatrix.txt  DistanceMatrixGenerator.cpp  DistanceMatrixGenerator.h  FileManager.cpp  FileManager.h  LastRunStats.csv
